# article-date-extractor

./: README.md  article-date-extractor.cabal  stack.yaml
src/Web/: ArticleDateExtractor.hs
test/: Spec.hs
